--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,9 +1,195 @@
-div.container.svelte-g5vkok.svelte-g5vkok{transform-origin:50% 50%;border-radius:50%;position:absolute;display:block;height:10vw;width:10vw;bottom:2vw;right:2vw}div.container.svelte-g5vkok div.arc.svelte-g5vkok{animation:svelte-g5vkok-pulse 1s cubic-bezier(0.39, 0.575, 0.565, 1) infinite;backface-visibility:hidden;transform-origin:50% 50%;background-color:white;border-radius:50%;position:absolute;bottom:8.875vw;right:3.875vw;height:2.25vw;width:2.25vw;display:block;margin:auto;left:auto;top:auto}@keyframes svelte-g5vkok-pulse{0%{transform:scale(0.33333);opacity:1}100%{transform:scale(1);opacity:0}}
-div#close-button.svelte-1fq5bjg.svelte-1fq5bjg{position:absolute;cursor:pointer;display:block;height:50px;width:50px;right:0;top:0}div#close-button.svelte-1fq5bjg h3.svelte-1fq5bjg{position:absolute;font-size:45px;line-height:1;right:2px;top:4px}
-div.screen.svelte-1v4oorh.svelte-1v4oorh{background-color:black;justify-content:center;align-items:center;position:absolute;display:flex;height:100%;width:100%;padding:0;margin:0;bottom:0;right:0;left:0;top:0}div.screen.svelte-1v4oorh div.progress.svelte-1v4oorh{justify-content:space-between;align-content:center;align-items:center;position:absolute;line-height:5vw;display:flex;margin:auto;height:5vw;width:40vw;bottom:0;right:0;left:0;top:0}
-button.svelte-1kqpmag{transition:border-color 0.5s, color 0.5s;text-transform:uppercase;background-color:black;border:solid 1px gray;text-align:center;line-height:25px;padding:5px 20px;font-size:1rem;cursor:pointer;height:35px;outline:0}button.svelte-1kqpmag:hover{border-color:#8a0707;color:#8a0707}
-div.svelte-3i4kug{background-color:black;position:absolute;display:block;height:100%;width:100%;padding:0;margin:0;left:0;top:0}div.svelte-3i4kug button{position:absolute;display:block;margin:auto;bottom:0;right:0;left:0;top:0}
-div.container.svelte-1d0mo7v.svelte-1d0mo7v{position:absolute;display:block;margin:auto;height:15px;width:15px;padding:0;bottom:0;right:0;left:0;top:0}div.container.svelte-1d0mo7v div.aim.svelte-1d0mo7v{transition-property:transform, opacity;transition-timing-function:ease-out;transform-origin:center center;transition-duration:250ms;border:2px solid white;border-radius:50%;position:absolute;display:block;height:100%;width:100%;left:-2px;top:-2px;padding:0;margin:0}div.container.svelte-1d0mo7v div.aim.shooting.svelte-1d0mo7v{animation:svelte-1d0mo7v-shoot 150ms ease-out}div.container.svelte-1d0mo7v div.aim.hide.svelte-1d0mo7v{transition-timing-function:ease-in;transform:scale(1.5);opacity:0}@keyframes svelte-1d0mo7v-shoot{0%{transform:scale(1)}33%{transform:scale(1.33)}100%{transform:scale(1)}}
-div.svelte-ixu9qz{clip-path:polygon(50% 0, 100% 100%, 50% 75%, 0% 100%);background-color:black;position:absolute;display:block;margin:auto;padding:0;height:1vw;width:1vw;bottom:0;right:0;left:0;top:0}
-div.map.svelte-1i410w2.svelte-1i410w2{background-color:rgba(255, 255, 255, 0.25);box-shadow:0px 0px 25px black;backdrop-filter:blur(5px);transform-origin:50% 50%;box-sizing:content-box;border-radius:50%;position:absolute;overflow:hidden;display:block;height:10vw;width:10vw;bottom:2vw;right:2vw}div.map.svelte-1i410w2 div.svelte-1i410w2{transform-origin:50% 50%;box-sizing:content-box;border-radius:50%;position:absolute;overflow:hidden;display:block;height:20vw;width:20vw;left:-5vw;top:-5vw}div.map.svelte-1i410w2 canvas.svelte-1i410w2{position:absolute;display:block;margin:auto;left:50%;top:50%}
-html,body{-webkit-text-rendering:optimizeLegibility;-webkit-tap-highlight-color:transparent;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-webkit-overflow-scrolling:none;-webkit-touch-callout:none;font-family:'DrawingBlood', sans-serif;text-rendering:optimizeLegibility;font-variant-ligatures:none;backface-visibility:hidden;background-color:black;text-size-adjust:100%;letter-spacing:normal;line-height:normal;user-select:none;appearance:none;overflow:hidden;font-weight:normal;font-kerning:none;font-style:normal;font-size:1rem;color:#8a0707;max-height:100%;min-height:100%;max-width:100%;min-width:100%;height:100%;width:100%;padding:0;margin:0;left:0;top:0}h1,h2,h3,h4{font-family:'FaceYourFears', sans-serif;letter-spacing:normal;line-height:normal;position:relative;display:block;color:#8a0707;padding:0;margin:0}p,h5,h6,span,strong,button{font-family:'DrawingBlood', sans-serif;letter-spacing:0.2rem;line-height:normal;position:relative;display:block;color:gray;padding:0;margin:0}h1{text-transform:uppercase;letter-spacing:0.5rem;line-height:5vw;font-size:5vw}h2{letter-spacing:0.4rem;line-height:4vw;font-size:4vw}h3{letter-spacing:0.3rem;line-height:3vw;font-size:3vw}body>canvas{position:absolute;display:block;height:100%;width:100%;padding:0;margin:0;left:0;top:0}
+html,
+body {
+  -webkit-text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: none;
+  -webkit-touch-callout: none;
+
+  font-family: 'DrawingBlood', sans-serif;
+  text-rendering: optimizeLegibility;
+  font-variant-ligatures: none;
+  backface-visibility: hidden;
+  background-color: #000000;
+  text-size-adjust: 100%;
+
+  letter-spacing: normal;
+  line-height: normal;
+  user-select: none;
+  appearance: none;
+  overflow: hidden;
+
+  font-weight: normal;
+  font-kerning: none;
+  font-style: normal;
+  font-size: 1rem;
+  color: #8a0707;
+
+  max-height: 100%;
+  min-height: 100%;
+
+  max-width: 100%;
+  min-width: 100%;
+
+  height: 100%;
+  width: 100%;
+
+  padding: 0;
+  margin: 0;
+
+  left: 0;
+  top: 0;
+}
+
+.disabled-js,
+.not-supported {
+  text-align: center;
+  position: absolute;
+
+  cursor: default;
+  display: none;
+  z-index: 999;
+
+  height: 100%;
+  width: 100%;
+}
+
+.disabled-js .disabled-js-copy,
+.not-supported .not-supported-copy {
+  text-shadow: 0 0 10px #8a0707;
+  position: absolute;
+  max-width: 625px;
+  color: #8a0707;
+
+  height: 125px;
+  margin: auto;
+  width: 100%;
+
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+}
+
+.not-supported .not-supported-copy {
+  height: 95px;
+}
+
+.disabled-js .disabled-js-copy strong,
+.not-supported .not-supported-copy strong {
+  font-family: 'FaceYourFears', monospace;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+
+  margin-bottom: 30px;
+  line-height: 25px;
+  font-size: 20px;
+  display: block;
+}
+
+.disabled-js .disabled-js-copy span,
+.not-supported .not-supported-copy span {
+  letter-spacing: 3px;
+  line-height: 20px;
+  font-size: 16px;
+}
+
+.not-supported .not-supported-copy span {
+  max-width: 450px;
+  display: block;
+  margin: 0 auto;
+}
+
+.not-supported .not-supported-copy span a {
+  background-color: #8a0707;
+  text-decoration: none;
+  padding: 0 2px 0 5px;
+  color: #000000;
+}
+
+.not-supported .not-supported-copy span a:hover {
+  letter-spacing: 2.5px;
+  font-weight: bold;
+}
+
+.no-js .disabled-js,
+.ms-ie .not-supported,
+.no-webgl .not-supported,
+.no-canvas .not-supported,
+.no-history .not-supported,
+.no-es5object .not-supported,
+.no-canvastext .not-supported,
+.no-csstransforms3d .not-supported,
+.no-csspointerevents .not-supported {
+  display: block !important;
+}
+
+.no-js #root,
+.no-webgl #root,
+.no-canvas #root,
+.no-history #root,
+.no-es5object #root,
+.no-canvastext #root,
+.no-csstransforms3d #root,
+.no-csspointerevents #root {
+  display: none !important;
+}
+
+@media (max-width: 767px) {
+  .disabled-js .disabled-js-copy,
+  .not-supported .not-supported-copy {
+    max-width: 95%;
+    height: 138px;
+    width: 95%;
+  }
+
+  .not-supported .not-supported-copy {
+    height: 110px;
+  }
+
+  .disabled-js .disabled-js-copy strong,
+  .not-supported .not-supported-copy strong {
+    letter-spacing: 0px;
+    margin: 0 auto 25px;
+    max-width: 290px;
+    font-size: 18px;
+  }
+
+  .not-supported .not-supported-copy strong {
+    max-width: 215px;
+  }
+
+  .disabled-js .disabled-js-copy span,
+  .not-supported .not-supported-copy span {
+    letter-spacing: 0px;
+    line-height: 18px;
+    max-width: 325px;
+
+    font-size: 14px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .not-supported .not-supported-copy span {
+    max-width: 230px;
+  }
+
+  .not-supported .not-supported-copy span a {
+    letter-spacing: 1px;
+  }
+
+  .not-supported .not-supported-copy span a:hover {
+    letter-spacing: 0.55px;
+  }
+}
+
+::-moz-selection {
+  background-color: #8a0707;
+  color: #000000;
+}
+
+::selection {
+  background-color: #8a0707;
+  color: #000000;
+}
