--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -59,10 +59,10 @@ body {
 .not-supported .not-supported-copy {
   text-shadow: 0 0 10px #8a0707;
   position: absolute;
-  max-width: 625px;
+  max-width: 465px;
   color: #8a0707;
 
-  height: 125px;
+  height: 135px;
   margin: auto;
   width: 100%;
 
@@ -73,7 +73,7 @@ body {
 }
 
 .not-supported .not-supported-copy {
-  height: 95px;
+  height: 140px;
 }
 
 .disabled-js .disabled-js-copy strong,
@@ -91,7 +91,7 @@ body {
 .disabled-js .disabled-js-copy span,
 .not-supported .not-supported-copy span {
   letter-spacing: 3px;
-  line-height: 20px;
+  line-height: 30px;
   font-size: 16px;
 }
 
@@ -103,13 +103,13 @@ body {
 
 .not-supported .not-supported-copy span a {
   background-color: #8a0707;
+  padding: 5px 5px 0 8px;
   text-decoration: none;
-  padding: 0 2px 0 5px;
   color: #000000;
 }
 
 .not-supported .not-supported-copy span a:hover {
-  letter-spacing: 2.5px;
+  letter-spacing: 2.75px;
   font-weight: bold;
 }
 
@@ -140,12 +140,12 @@ body {
   .disabled-js .disabled-js-copy,
   .not-supported .not-supported-copy {
     max-width: 95%;
-    height: 138px;
+    height: 120px;
     width: 95%;
   }
 
   .not-supported .not-supported-copy {
-    height: 110px;
+    height: 125px;
   }
 
   .disabled-js .disabled-js-copy strong,
@@ -163,7 +163,7 @@ body {
   .disabled-js .disabled-js-copy span,
   .not-supported .not-supported-copy span {
     letter-spacing: 0px;
-    line-height: 18px;
+    line-height: 25px;
     max-width: 325px;
 
     font-size: 14px;
@@ -172,7 +172,7 @@ body {
   }
 
   .not-supported .not-supported-copy span {
-    max-width: 230px;
+    max-width: 275px;
   }
 
   .not-supported .not-supported-copy span a {
@@ -180,7 +180,7 @@ body {
   }
 
   .not-supported .not-supported-copy span a:hover {
-    letter-spacing: 0.55px;
+    letter-spacing: 0.75px;
   }
 }
 
