--- a/src/components/scss/animations.scss
+++ b/src/components/scss/animations.scss
@@ -1,13 +1,13 @@
 @keyframes loading {
   0% {
-    opacity: 0;
+    opacity: 0%;
   }
 
   50% {
-    opacity: 1;
+    opacity: 100%;
   }
 
   100% {
-    opacity: 0;
+    opacity: 0%;
   }
 }
