--- a/src/components/scss/variables.scss
+++ b/src/components/scss/variables.scss
@@ -25,7 +25,7 @@ $ease-in-out-expo  : cubic-bezier(1.000,  0.000, 0.000, 1.000);
 $ease-in-out-circ  : cubic-bezier(0.785,  0.135, 0.150, 0.860);
 $ease-in-out-back  : cubic-bezier(0.680, -0.550, 0.265, 1.550);
 
-$white             : rgb(255, 255, 255);
-$grey              : rgb(128, 128, 128);
-$red               : rgb(138, 7, 7);
-$black             : rgb(0, 0, 0);
+$white             : rgb(255 255 255);
+$grey              : rgb(128 128 128);
+$red               : rgb(138 7 7);
+$black             : rgb(0 0 0);
