Add common input components
Update settings menu screen
Add camera rotation onPlay
Fix keyboard menu event

--- a/src/components/menu/mixins.scss
+++ b/src/components/menu/mixins.scss
@@ -23,7 +23,7 @@
   cursor: pointer;
 
   #{$heading} {
-    transition: transform 0.4s var.$ease-in-out-quad, color 0.2s;
+    transition: transform 400ms var.$ease-in-out-quad, color 200ms;
     pointer-events: none;
     color: var.$red;
 
