Add dispose method to all classes
Remove Loading animation
Add Game::SettingsInit event
Use Math.hypot when needed

--- a/src/components/menu/mixins.scss
+++ b/src/components/menu/mixins.scss
@@ -21,9 +21,11 @@
 @mixin item ($heading) {
   width: 100%;
   cursor: pointer;
+  backface-visibility: hidden;
 
   #{$heading} {
     transition: transform 400ms var.$ease-in-out-quad, color 200ms;
+    backface-visibility: hidden;
     pointer-events: none;
     color: var.$red;
 
