--- a/src/components/scss/animations.scss
+++ b/src/components/scss/animations.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 
-@keyframes loading {
+/* @keyframes loading {
   0% {
     opacity: 0;
   }
@@ -12,7 +12,7 @@
   100% {
     opacity: 0;
   }
-}
+} */
 
 @keyframes shoot {
   0% {
