--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -2,15 +2,15 @@
 
 html,
 body {
-  -webkit-text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: transparent;
+  -webkit-text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: none;
   -webkit-touch-callout: none;
 
   font-family: DrawingBlood, sans-serif;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizeSpeed;
   font-variant-ligatures: none;
   backface-visibility: hidden;
   background-color: #000000;
@@ -116,25 +116,11 @@ body {
 }
 
 .no-js .disabled-js,
-.ms-ie .not-supported,
-.no-webgl .not-supported,
-.no-canvas .not-supported,
-.no-history .not-supported,
-.no-es5object .not-supported,
-.no-canvastext .not-supported,
-.no-csstransforms3d .not-supported,
-.no-csspointerevents .not-supported {
+.ms-ie .not-supported {
   display: block !important;
 }
 
-.no-js #root,
-.no-webgl #root,
-.no-canvas #root,
-.no-history #root,
-.no-es5object #root,
-.no-canvastext #root,
-.no-csstransforms3d #root,
-.no-csspointerevents #root {
+.no-js #root {
   display: none !important;
 }
 
@@ -154,6 +140,7 @@ body {
   .not-supported .not-supported-copy strong {
     letter-spacing: 0px;
     margin: 0 auto 25px;
+
     max-width: 290px;
     font-size: 18px;
   }
