--- a/src/components/menu/mixins.scss
+++ b/src/components/menu/mixins.scss
@@ -1,3 +1,4 @@
+@use "@/mixins" as mixin;
 @use "@/variables" as var;
 
 @mixin list ($headings) {
@@ -19,9 +20,10 @@
 }
 
 @mixin item ($heading) {
-  width: 100%;
-  cursor: pointer;
+  @include mixin.cursor(true);
+
   backface-visibility: hidden;
+  width: 100%;
 
   #{$heading} {
     transition: transform 400ms var.$ease-in-out-quad, color 200ms;
