Add random coords util class
Update types and unit tests
Fix custom cursor path
Fix exit in production application

--- a/src/components/scss/mixins.scss
+++ b/src/components/scss/mixins.scss
@@ -1,10 +1,10 @@
 @use "sass:string";
 
 @mixin cursor ($pointer: false) {
-  cursor: url("/assets/cursor/default.png"), auto;
+  cursor: var(--default-cursor), auto;
 
   @if $pointer {
-    cursor: url("/assets/cursor/pointer.png"), pointer;
+    cursor: var(--pointer-cursor), pointer;
   }
 }
 
