--- a/public/styles/fonts.css
+++ b/public/styles/fonts.css
@@ -6,13 +6,9 @@
   font-weight: 400;
 
   unicode-range:
-    u+0000-00ff,
-    u+0131, u+0152-0153,
-    u+02bb-02bc, u+02c6, u+02da, u+02dc,
-    u+2000-206f, u+2074, u+20ac,
-    u+2122, u+2191, u+2193,
-    u+2212, u+2215,
-    u+feff, u+fffd;
+    u+0000-00ff, u+0131, u+0152-0153, u+02bb-02bc, u+02c6, u+02da,
+    u+02dc, u+2000-206f, u+2074, u+20ac, u+2122, u+2191,
+    u+2193, u+2212, u+2215, u+feff, u+fffd;
 }
 
 @font-face {
@@ -23,11 +19,7 @@
   font-weight: 400;
 
   unicode-range:
-    u+0000-00ff,
-    u+0131, u+0152-0153,
-    u+02bb-02bc, u+02c6, u+02da, u+02dc,
-    u+2000-206f, u+2074, u+20ac,
-    u+2122, u+2191, u+2193,
-    u+2212, u+2215,
-    u+feff, u+fffd;
+    u+0000-00ff, u+0131, u+0152-0153, u+02bb-02bc, u+02c6, u+02da,
+    u+02dc, u+2000-206f, u+2074, u+20ac, u+2122, u+2191,
+    u+2193, u+2212, u+2215, u+feff, u+fffd;
 }
